AdminController und die relevanten repositorys