@@ -10,9 +10,11 @@ import org.hibernate.annotations.CreationTimestamp;
 import org.hibernate.annotations.GenericGenerator;
 import org.hibernate.annotations.UpdateTimestamp;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
@@ -53,7 +55,8 @@ public class User implements UserDetails {
 
     public enum Role {
         USER,
-        ADMIN
+        ADMIN,
+        SUPER_ADMIN
     }
 
     @Enumerated(EnumType.STRING)
@@ -62,9 +65,14 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
-
+    @PrePersist
+protected void onCreate() {
+    if (this.role == null) {
+        this.role = Role.USER;
+    }
+}
     @Override
     public String getUsername() {
         return username;
@@ -89,4 +97,6 @@ public class User implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
+
 }
+
